# promptlibretto

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  MEMORY_DESIGN.md  PROMPT_ENGINE_DESIGN.md  README.md  docker-compose.yml  expy_regmodel.py  indexv2.html  magic_tech_support.json  migrate_examples.py  proposedDesignChange.md  proposedRegistryState.md  pyproject.toml  run.py  tool.html  zensical.toml
docs/: design.md  index.md  server.md
ensemble/: engine.py
prompt_engine/: __init__.py  config.py
prompt_engine/builders/: builder.py
prompt_engine/context/: overlay.py
prompt_engine/providers/: base.py  ollama.py
prompt_engine/routing/: route.py
prompt_engine/runtime/: engine.py  middleware.py
promptlibretto/: __init__.py  config.py  export.py  random_source.py  serialize.py  template.py
promptlibretto/assets/: __init__.py  registry.py
promptlibretto/builders/: __init__.py  builder.py  composite.py
promptlibretto/context/: __init__.py  overlay.py  store.py  template.py
promptlibretto/memory/: __init__.py  classifier.py  embedder.py  engine.py  personality.py  (+6 more)
server/: README.md  base_library.py  main.py  middleware.py  presets.py
studio/: README.md  config.py  custom_route_library.py  ensemble_routes.py  main.py  memory_routes.py  presets.py  registry_routes.py  snapshot_library.py
testbench/: README.md  main.py  presets.py  run.py  scenario_library.py
tests/: conftest.py  test_builders.py  test_engine.py  test_ergonomics.py  test_history.py  test_middleware_and_streaming.py  test_ollama_provider.py  test_output.py  test_overlays_and_budget.py  test_registry.py  test_routing.py  test_serialize.py
(+63 files in other folders)
