[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "promptlibretto"
version = "0.5.0"
description = "Registry-based prompt model: sections of items, an assembly order, runtime modes, and a browser studio that exports the same JSON the library loads."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sockheadrps" }]
keywords = ["prompt", "llm", "ollama", "prompt-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
ollama = ["httpx>=0.25"]
studio = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.25", "pydantic>=2.0"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://github.com/sockheadrps/promptlibretto"
Issues = "https://github.com/sockheadrps/promptlibretto/issues"

[project.scripts]
promptlibretto-studio = "studio.run:main"

[tool.hatch.build.targets.wheel]
packages = ["promptlibretto", "studio"]

[tool.hatch.build.targets.sdist]
include = [
    "promptlibretto/",
    "studio/",
    "README.md",
    "DESIGN.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
